tassert 9690601 doesn't hold for CMC on secondaries

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 9.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • CAR Team 2026-07-20
    • 0
    • 🟦 Shard Catalog
    • None
    • None
    • None
    • None
    • None
    • None

      tassert 9690601 assumes that a collection can't be dropped during CMC, which holds for primaries, but secondaries are relying on the primary holding the DDL lock for this assumption to hold. If the primary gets killed, the DDL lock is no longer held, so secondaries can see all sorts of inconsistencies as the catalog is no longer stable. Any such inconsistency isn't generally an issue since there's no longer a primary to collect them and send them back to the user, but tasserts are louder so we should suppress them on secondaries.

            Assignee:
            Aitor Esteve Alvarado
            Reporter:
            Aitor Esteve Alvarado
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: