SERVER-131168 Suppress tassert 9690601 on secondary nodes (#58347)

GitOrigin-RevId: 60bc65c353f6d528e2b48a199323016e2dd5f14c